# TATest

TATest_Android/: build.gradle  gradle.properties  settings.gradle
TATest_Android/app/: build.gradle
TATest_Android_Gradle/: settings.gradle
TATest_Android_Gradle/app/: build.gradle
TATest_JavaScript/: Base.js  Home.js  HomeAsyn.html  HomeSyn.html  jsBase.html  localStorage.html
TATest_JavaScript/dyz_js/: JSAsync.js  JSClass.js  JSFunction.js  JSObject.js  JSSystemMethod.js  JSTATest.js
TATest_JavaScript/dyz_resource/: mycar.html
TATest_JavaScript/ta_js_sdk/: thinkingdata.umd.min.js
TATest_LayaTS/: TATest_LayaTS.laya
TATest_LayaTS/.laya/: web.json  wxgame.json
TATest_LayaTS/laya/: .laya  pageStyles.xml
TATest_LayaTS/libs/: ThinkingAnalyticsSDK.d.ts
TATest_LayaTS/src/: GameConfig.ts  SceneOnedyz.ts
TATest_Swift/: Podfile
TATest_Swift/TATest_Swift/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
TATest_Swift/TATest_Swift.xcodeproj/: project.pbxproj
TATest_Swift/TATest_Swift.xcworkspace/: contents.xcworkspacedata
TATest_cpp/: CMakeLists.txt  main.cpp
TATest_iOS/: Podfile
TATest_iOS/TATest_iOS/: APNSManager.h  (+14 more)
TATest_mg_tt/: game.js  project.config.json  thinkingdata.mg.tt.min.js
TATest_mg_wx/: game.js  project.config.json  project.private.config.json  thinkingdata.mg.wx.js  thinkingdata.mg.wx.min.js  thinkingdata.mg.xiaomi.min.js
TATest_mp_wx/: app.js  project.config.json  project.private.config.json  thinkingdata.wx.js  thinkingdata.wx.min.js
TATest_server_java/: pom.xml
tatest_flutter/: README.md  pubspec.yaml
(+91 files in other folders)
